--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,46 +1,32 @@
 version: 2.1
 orbs:
   node: circleci/node@5.0.0
-  aws-cli: circleci/aws-cli@2.0.6
+  aws-cli: circleci/aws-cli@2.1.0
   eb: circleci/aws-elastic-beanstalk@2.0.1
 jobs:
   build:
     docker:
-      - image: cimg/base:stable
+     - image: cimg/base:stable
     steps:
       - node/install
       - checkout
-      - aws-cli/setup
+      - aws-cli/install
       - eb/setup
       - run:
-            name: Front-End Install
-            command: |
-              npm run frontend:install
+          name: Install Front-End
+          command: npm run install:frontend
       - run:
-            name: Back-End Install
-            command: |
-              npm run backend:install
+          name: Install Back-end
+          command: npm run install:backend
       - run:
-            name: Front-End Build
-            command: |
-              npm run frontend:build
+          name: Build Front-End
+          command: npm run build:frontend
       - run:
-            name: Back-End Build
-            command: |
-              npm run backend:build
+          name: Build Back-end
+          command: npm run build:backend
       - run:
-            name: Deploy App
-            command: |
-              npm run frontend:deploy
+          name: Deploy Front-End
+          command: npm run deploy:frontend
       - run:
-            name: Back-End Deploy
-            command: |
-              npm run backend:deploy  
-workflows:
-    build-deploy:
-      jobs:
-        - build:
-            filters:
-              branches:
-                only:
-                  - main
+          name: Deploy Back-end
+          command: npm run deploy:backend
