--- a/backend/.elasticbeanstalk/config.yml
+++ b/backend/.elasticbeanstalk/config.yml
@@ -1,6 +1,6 @@
 branch-defaults:
   default:
-    environment: backend-env
+    environment: Backend-env
     group_suffix: null
 global:
   application_name: backend
