--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,8 +39,4 @@ jobs:
 workflows:
     build-deploy:
       jobs:
-        - build:
-            filters:
-              branches:
-                only:
-                  - cicd
+        - build
