--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,4 +39,8 @@ jobs:
 workflows:
     build-deploy:
       jobs:
-        - build
+        - build:
+            filters:
+              branches:
+                only: 
+                  - main
