--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
     "scripts": {
         "deploy": "chmod +x ./bin/deploy.sh && ./bin/deploy.sh",
         "build": "echo \"Error: nothing build\"",
+        "dev": "http-server ./www -o",
         "test": "echo \"Error: no test specified\""
     },
     "author": "Mahmoud Kassem",
