--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,3 +1,7 @@
 node_modules
 www
 .env
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
