--- a/backend/.elasticbeanstalk/config.yml
+++ b/backend/.elasticbeanstalk/config.yml
@@ -2,6 +2,8 @@ branch-defaults:
   default:
     environment: Quotes-env
     group_suffix: null
+deploy:
+  artifact: ./www/app.zip
 global:
   application_name: Quotes
   branch: null
@@ -12,7 +14,7 @@ global:
   instance_profile: null
   platform_name: null
   platform_version: null
-  profile: default
+  profile: null
   repository: null
   sc: null
   workspace_type: Application
