--- a/backend/package.json
+++ b/backend/package.json
@@ -2,14 +2,14 @@
     "name": "deployment-backend",
     "version": "1.0.0",
     "description": "",
-    "main": "www/app.js",
+    "main": "app.js",
     "scripts": {
         "start": "node .",
         "dev": "nodemon src/app.ts --watch",
         "clean": "rmdir /Q /S www",
         "copy:scripts": "@powershell copy ./package.json ./www/package.json && @powershell copy ./.npmrc ./www/.npmrc",
         "deploy": "chmod +x ./bin/deploy.sh && ./bin/deploy.sh",
-        "build": "npx tsc",
+        "build": "rm -r ./www && npx tsc && cd www && cp ../package.json ./ && zip -r app.zip ./* && ../",
         "db:up": "db-migrate up",
         "db:down": "db-migrate reset",
         "test": "echo \"Error: no test specified\""
@@ -38,6 +38,7 @@
         "@types/morgan": "^1.9.3",
         "@types/pg": "^8.6.4",
         "nodemon": "^2.0.15",
+        "ts-node": "^10.9.1",
         "typescript": "^4.5.5"
     }
 }
