--- a/backend/.elasticbeanstalk/config.yml
+++ b/backend/.elasticbeanstalk/config.yml
@@ -3,7 +3,7 @@ branch-defaults:
     environment: Quotes-env
     group_suffix: null
 deploy:
-  artifact: ./www/app.zip
+  artifact: www/app.zip
 global:
   application_name: Quotes
   branch: null
@@ -14,7 +14,7 @@ global:
   instance_profile: null
   platform_name: null
   platform_version: null
-  profile: null
+  profile: eb-cli
   repository: null
   sc: null
   workspace_type: Application
